tests/snapshots/protocols__interpreter__tests__mult_execution.snap
---
source: src/interpreter.rs
expression: content
---
Assertion Failed

error: The two expressions did not evaluate to the same value
   ┌─ tests/mul.prot:19:13
   │
19 │   assert_eq(s, dut.s);
   │             ^^^^^^^^ LHS Value: ValueOwned(00000000000000000000000000110000), RHS Value: ValueOwned(00000000000000000000000000000000)
